<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/quizzon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:lineSpacingExtra="12sp"
                android:text="Quizz"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#3F51B5"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/numero"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:text="Question n°"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:lineSpacingExtra="34sp"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/reponse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                android:minHeight="48dp"
                android:textAlignment="center" />

            <Button
                android:id="@+id/validation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/validation"
                android:textColorLink="#03A9F4" />

            <Button
                android:id="@+id/suivante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qsuivante"
                android:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/quizzoff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:lineSpacingExtra="12sp"
                android:text="@string/qtermine"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#3F51B5"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="#4CAF50" />

            <TextView
                android:id="@+id/appreciation"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/encore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/encore" />
        </LinearLayout>

        <Button
            android:id="@+id/quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quitter"
            tools:visibility="visible" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>